@@ -1,6 +1,16 @@
 SVN $Id$
 SVN $URL$
 ===============================================================================
+Tag Creator: mlevy
+Developers:  mlevy
+Tag Date:    28 July 2014
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140728
+Tag Summary: OCN_ONED variable was renamed OCN_ONEDIM in env_run.xml
+
+Files Modified:
+M       bld/build-namelist
+M       bld/namelist_files/namelist_defaults_pop2.xml
+===============================================================================
 Tag Creator: santos
 Developers:  santos
 Tag Date:    14 July 2014
